<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FitJourney"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/corPrincipal"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_sem_fundo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faca_login"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textStyle="normal"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:background="@drawable/borda"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/senha"
        android:background="@drawable/borda"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        />

    <TextView
        android:id="@+id/etCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/clique_para_criar"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/entrar"
        android:textColor="@color/black"
        android:background="@drawable/borda"
        android:layout_gravity="center"
        android:layout_marginTop="40dp" />

</LinearLayout>
