<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/corPrincipal">

        <ImageView
            android:id="@+id/comeBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/img_voltar"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_preto"
            android:layout_marginLeft="130dp"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faca_registro"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantos_treinos"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/Training"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/ex_5"
        android:background="@drawable/borda"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantas_academias"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/Gyms"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/ex_2"
        android:background="@drawable/borda"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/borda"
        android:backgroundTint="@color/corPrincipal"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/avancar"
        android:textSize="25dp"/>

</LinearLayout>
