<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/corPrincipal">

        <ImageView
            android:id="@+id/btnLogout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/img_sair_preta"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_preto"
            android:layout_marginLeft="130dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FitJourney"
        android:shadowColor="@color/black"
        android:shadowRadius="3"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/corPrincipal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/btnTraining"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/corPrincipal"
            android:text="@string/treinos"
            android:background="@drawable/borda"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/btnDiets"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/corPrincipal"
            android:text="@string/dietas"
            android:background="@drawable/borda"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <Button
            android:id="@+id/btnAnthropometricAssessment"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/corPrincipal"
            android:text="@string/avaliacao_antropometrica_n"
            android:background="@drawable/borda"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/btnPhotos"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/corPrincipal"
            android:text="@string/fotos"
            android:background="@drawable/borda"
            android:textSize="20dp"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="@color/corPrincipal">

    </LinearLayout>

</LinearLayout>
